Make minor style adjustments: fixed link text wrap in main nav, in _globals.css assigned font family to body tag instead of everything, and created an inline-link hover color variable and assigned it within _link.css.

--- a/src/assets/styles/modules/_link.css
+++ b/src/assets/styles/modules/_link.css
@@ -33,7 +33,10 @@
    color: rgb($color_textLink_inline);
    /*hover*/
    .has-no-touch &:hover{
-      font-style: normal;
+     /*colors*/
+     color: rgb($color_textLink_inline_hover);
+     /*typography*/
+    font-style: normal;
    }
 
    /**************************************/
